# weareunder.design

./: .gitignore  2026-06-01T05-52-58.md  2026-07-05T07-51-56.md  404.html  505.html  about-us.html  alcide.html  avenue.html  balance.html  brand-sprint.html  crisp-city.html  darna.html  eevo.html  empirical.html  everafter.html  faintlines.html  flume.html  for-ukrain.html  for-ukraine.html  frmwrk.html  frmwrk.md  healthquarters.html  iceberg.html  icepop.html  index.html  justripe.html  kamila.html  karma.html  komodor.html  la-rosh.html  la-salon.html  legal.html  markdown-editor-app.html  mesh-payments.html  mesh.html  new_index.html  notch.html  package-lock.json  package.json  per-diem.html  (+23 more)
.claude/: settings.local.json
animations/: about.json  animation_1.json  animation_2.json  animation_3.json  dark.webm  light.webm
articles/: index.html
bike/: .gitignore  build.sh  dev.sh  setup.sh  vendor-icons.sh
bike/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
bike/src-tauri/capabilities/: default.json
blog/: index.html
brandscale/: index.html
brandsprint/: index.html  new_index.html
css/: ESRebondGrotesque-Medium.eot  justripe.css  styles.css  ukraine-styles.css
js/: 404.js  about.js  accordion.js  articlesurl.js  circle.js  circle_animation.js  footer.js  header.js  lottie_scroll.js  main.js  mobile_covers.js  navigation.js  nudgefont.js  pingpong.js  randomcolorchange.js  revelation.js  revelations.js  schedule.js  shop-footer.js  shop.js  sidebar.js  slider.js  testimonialsticker.js  ticker.js  video.js
justripe/: index.html
(+340 files in other folders)
