[package]
name = "bike"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-updater = "2"
ureq = { version = "2", features = ["json"] }
which = "6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSButton", "NSControl", "NSEvent", "NSResponder"] }
block2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
